# holla

./: README.md
client/: CMakeLists.txt
client/cmd-client/: CMakeLists.txt
client/cmd-client/src/: app.cpp  app.h  main.cpp
client/libholla/: CMakeLists.txt
client/libholla/include/: connectionpool.h  event.h  holla.h  holla.h.autosave  mqttclient.h  protocolparser.h  router.h
client/libholla/src/: connectionpool.cpp  holla.cpp  mqttclient.cpp  protocolparser.cpp  router.cpp
docs/: layered_architecture.vsdx  overview.txt  ~$$layered_architecture.~vsdx
